cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web sigueme en instagram como Mariana Vargas 
+        oye 
+        hice una pagina de internert 
+        solo para decirte que te amo 
+        con todo mi corazon 
+         
     </p>
 </body>
 </html>
